build: output site at root

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && vite build",
-    "dev": "vite",
+    "build": "tsc --noEmit && vite build --outDir .",
+    "dev": "cp index.dev.html index.html && vite",
     "start": "vite preview"
   },
   "keywords": [],
