--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ai-test1",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --noEmit && vite build --outDir .",
+    "build": "vite build --outDir .",
     "dev": "cp index.dev.html index.html && vite",
     "start": "vite preview"
   },
