--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "node scripts/update-build-number.js",
-    "build": "tsc -b && vite build",
+    "build": "VITE_APP_VERSION=$npm_package_version vite build --emptyOutDir=false --outDir=.",
     "lint": "eslint .",
-    "test": "vitest run",
+    "test": "VITE_APP_VERSION=$npm_package_version vitest run && playwright test",
+    "prepush": "npm run test && npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@playwright/test": "^1.53.1",
     "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/react": "^14.2.0",
     "@types/react": "^19.1.2",
@@ -30,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "playwright": "^1.53.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
